force-app/main/default/objects/Internal_Campaign_Members__c/Internal_Campaign_Members__c.object-meta.xml
<CustomObject>
    <label>Internal Campaign Members</label>
    <nameField>
        <displayFormat>ICM-{0000}</displayFormat>
        <label>Internal Campaign Members ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Campaign Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>