force-app/main/default/objects/Internal_Campaign_Members__c/fields/NSSale_Non_Connect_NS_User_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>NSSale_Non_Connect_NS_User_Email_Address__c</fullName>
    <label>Non-Connect NS User Email Address</label>
    <type>Email</type>
</CustomField>