force-app/main/default/objects/Internal_Campaign_Members__c/fields/NSSale_Non_Connect_NS_User_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>NSSale_Non_Connect_NS_User_Phone_Number__c</fullName>
    <label>Non-Connect NS User Phone Number</label>
    <type>Phone</type>
</CustomField>