force-app/main/default/objects/Internal_Campaign_Members__c/fields/NSSales_Assosiated_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Assosiated_Business_Unit__c</fullName>
    <formula>TEXT(NSSales_Internal_User__r.Associated_Business_Unit__c)</formula>
    <label>Associated Business Unit</label>
    <type>Text</type>
</CustomField>