force-app/main/default/objects/Internal_Campaign_Members__c/fields/NSSales_Campaign__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Campaign__c</fullName>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Internal Campaign Members</relationshipLabel>
    <relationshipName>Internal_Campaign_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>