force-app/main/default/objects/Internal_Campaign_Members__c/fields/NSSales_Email__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Email__c</fullName>
    <formula>NSSales_Internal_User__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>