force-app/main/default/objects/Internal_Campaign_Members__c/fields/NSSales_Internal_Campaign_Member_Hidden__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Internal_Campaign_Member_Hidden__c</fullName>
    <formula>IF( NOT( ISBLANK( NSSales_Internal_User__c ) ) ,NSSales_Internal_User__r.FirstName +&quot; &quot;+ NSSales_Internal_User__r.LastName ,  IF( NOT( ISBLANK( NSSales_Non_Connect_NS_User__c ) ) ,NSSales_Non_Connect_NS_User__c , &#39;&#39;) )</formula>
    <label>Internal Campaign Member</label>
    <type>Text</type>
</CustomField>