force-app/main/default/objects/Internal_Campaign_Members__c/fields/NSSales_Internal_User__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Internal_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Internal_Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>