force-app/main/default/objects/Internal_Campaign_Members__c/fields/NSSales_Non_Connect_NS_User__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Non_Connect_NS_User__c</fullName>
    <label>Non-Connect NS User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>