force-app/main/default/objects/Internal_Campaign_Members__c/fields/NSSales_Phone__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>