force-app/main/default/objects/Internal_Campaign_Members__c/fields/NSSales_Phone_Hidden__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Phone_Hidden__c</fullName>
    <formula>IF( NOT( ISBLANK( NSSales_Phone__c) ) , NSSales_Phone__c, IF( NOT( ISBLANK( NSSale_Non_Connect_NS_User_Phone_Number__c) ) , NSSale_Non_Connect_NS_User_Phone_Number__c,&#39;&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NSSales_Phone_Hidden</label>
    <type>Text</type>
</CustomField>