force-app/main/default/objects/Internal_Campaign_Members__c/fields/NSSales_Role_Hidden__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Role_Hidden__c</fullName>
    <formula>IF( NOT( ISBLANK( NSSales_Role__c ) ) ,  NSSales_Role__c ,  IF( NOT( ISBLANK( NSSales_Non_Connect_NS_User_Role__c ) )  ,  NSSales_Non_Connect_NS_User_Role__c ,&#39;&#39;))</formula>
    <label>Role</label>
    <type>Text</type>
</CustomField>