force-app/main/default/objects/Internal_Campaign_Members__c/validationRules/NSSales_ConnectNSRoleRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>NSSales_ConnectNSRoleRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK( NSSales_Internal_User__c ) ) , ISBLANK( NSSales_Role__c ) )</errorConditionFormula>
    <errorDisplayField>NSSales_Role__c</errorDisplayField>
    <errorMessage>If Internal User is populated and Role is required.</errorMessage>
</ValidationRule>