force-app/main/default/objects/Internal_Campaign_Members__c/validationRules/NSSales_NonConnectNSRoleRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>NSSales_NonConnectNSRoleRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK( NSSales_Non_Connect_NS_User__c ) ) , ISBLANK( NSSales_Non_Connect_NS_User_Role__c ) )</errorConditionFormula>
    <errorDisplayField>NSSales_Non_Connect_NS_User_Role__c</errorDisplayField>
    <errorMessage>If Non-ConnectNS User is populated, the Non-ConnectNS User Role should be required</errorMessage>
</ValidationRule>