force-app/main/default/objects/Internal_Campaign_Members__c/validationRules/NSSales_restrictionOnUserinfochange.validationRule-meta.xml
<ValidationRule>
    <fullName>NSSales_restrictionOnUserinfochange</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(NSSales_Non_Connect_NS_User__c) ||
ISCHANGED(NSSales_Internal_User__c)</errorConditionFormula>
    <errorMessage>You cannot edit the name of an existing Internal Campaign Member. Please create a new Internal Campaign Member.</errorMessage>
</ValidationRule>